2007-12-12  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/base/tile-private.h
        * app/base/tile-swap.c: Move the LARGE_SEEK and LARGE_TRUNCATE
        macros from tile-private.h to tile-swap.c as they aren't used
        anywhere else, and the helper function used on Windows was static
        in tile-swap.c anyway. (#503124)

2007-12-11  Kevin Cozens  <kcozens@cvs.gnome.org>

	Merged from trunk:

	* plug-ins/script-fu/tinyscheme/scheme.c (get_consecutive_cells):
	Fix to prevent reporting out of memory when there should be plenty
	of cells still available. See SourceForge bug #1794369.

2007-12-11  Kevin Cozens  <kcozens@cvs.gnome.org>

	Merged from trunk:

	* plug-ins/script-fu/tinyscheme/scheme.c: Applied changes from
	official version of TinyScheme which fix is_integer(). See
	SourceForge bug #1593861.

2007-12-11  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* libgimpbase/gimpwire.c (_gimp_read_read_string): NULL-terminate
	all strings coming in over the wire protocol. Should help with bug
	#498207.

2007-12-10  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_tool_events): if a device change happens, make
	sure we update the new active tool's focus display and modifier
	state. Fixes most of bug #493176.

2007-12-10  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from trunk:

	* app/paint/gimpheal.c: make the healing brush work properly
	when dragged.  Fixes bug #492575.

2007-12-07  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from trunk:

	* app/display/gimpdisplayshell-draw.c: draw grid correctly when
	non-integer spacing is combined with a large offset.  Fixes
	bug #502374.

	* app/core/gimpimage-snap.c: make snapping to grid work when
	coord is less than the grid offset.

2007-12-07  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* configure.in: fixed indentation of --help output.

2007-12-07  Sven Neumann  <sven@gimp.org>

	Merged from trunk: